--- a/package.json
+++ b/package.json
@@ -6,13 +6,14 @@
     "@googlemaps/js-api-loader": "^1.14.3",
     "@googlemaps/react-wrapper": "^1.1.35",
     "@react-google-maps/api": "^2.12.1",
-    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "google-maps": "^4.3.3",
     "haversine-distance": "^1.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router": "^6.3.0",
     "react-router-dom": "^5.3.3",
     "react-scripts": "5.0.1",
     "react-transition-group": "^4.4.5",
