--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "@turf/midpoint": "^6.5.0",
     "google-maps": "^4.3.3",
     "haversine-distance": "^1.2.1",
     "react": "^18.2.0",
